style.css
/*
Theme Name: Leslie Gill Architect
Github Theme URI: https://github.com/juliapanek/lga-wp-theme
Author: Julia Panek
*/ 

html, body {
	height: 100%;
}

body {
	width: 100%;
	margin: 0;
	padding: 0;
	background-color: rgb(254, 254, 254);
	font-family: "News Gothic Regular", 'Arial Narrow', sans-serif; 
	font-weight: normal;
	font-style: normal;
	font-size: 16px;
}

.column-container {
	position: relative;
	margin: 40px 0 0 0;
}

ul {
	margin: 0;
	padding: 0;
}

a {
	color: inherit;
	font-family: inherit;
	size: inherit;
}

a:hover {
	color: rgb(242, 134, 39);
}

#header {
	top: 0;
	height: 40px;
	width: 100%;
	position: absolute;
	z-index: -1;
	background-color: rgb(254, 254, 254);
	border-top: 2px solid rgb(242, 134, 39);
}


#header h1 {
	font-size: 6px;
	visibility: hidden;
}

#header_content {
	padding: 18px;
}

#wrapper {
	min-height: 100%;
	height: auto !important;
	height: 100%;
	margin: 0 auto -5em auto;
}

#container {
	margin-bottom: 40px;
}

#info {
	padding-top: 40px;
}

/* first for IE 4–8 */
@font-face {
  font-family: ScalaWeb;
  src: url("./fonts/ScalaWeb.eot");
}

/* then for WOFF-capable browsers */
@font-face {
  font-family: ScalaWeb;
  src: url("./fonts/ScalaWeb.woff") format("woff");
}


p { 
	font-family: ScalaWeb, serif;
	-webkit-font-smoothing: antialiased;
	font-size: 16px;
	line-height: 1.3;
	margin: 0;
	color: black; 
}

p.indent {
	font-family: ScalaWeb, serif;
	-webkit-font-smoothing: antialiased;
	font-size: 16px;
	line-height: 1.3;
	color: dimgray; 
	padding: 0 0 10px 10px;

}

.title {
	font-family: "News Gothic", 'Arial Narrow', sans-serif; 
	font-weight: normal; 
	font-size: 15px;
	text-transform: uppercase;
	letter-spacing: 1px;
	line-height: .8;
	color: rgb(242, 134, 39);
	padding: 0;
	margin: 0 0 4px 0;
}


.location {
	font-family: "News Gothic", 'Arial Narrow', sans-serif; 
	font-size: 13px;
	font-weight: normal;
	text-transform: uppercase;
	letter-spacing: 1px;
	color: gray;
	padding: 0;
	margin: 0;
}

.license {
	font-family: "News Gothic", 'Arial Narrow', sans-serif; 
	font-size: 12px;
	text-transform: uppercase;
	letter-spacing: 1px;
	color: gray;
	padding: 0;
	margin: 0;
}

.resume_section, .projects_category {
	font-family: "News Gothic", 'Arial Narrow', sans-serif; 
	font-size: 12px;
	text-transform: uppercase;
	letter-spacing: 1px;
	color: dimgray;
	padding: 0;
	margin: 0;
}

li.resume {
	padding: 0 0 40px 0;
}

li a:hover {
	color: rgb(242, 134, 39);
}

h1.caption_title {
	font-family: 'News Gothic Regular', 'Arial Narrow', sans-serif, sans-serif !important;
    font-style: normal !important;
    font-weight: normal !important;
	font-size: 16px;
	line-height: .5;
	letter-spacing: 1px;
	text-transform: uppercase;
	color: dimgray;
}
.list-img-caption {
	font-family: 'News Gothic Regular', 'Arial Narrow', sans-serif, sans-serif !important;
	-webkit-font-smoothing: antialiased;
	font-size: 16px;
	line-height: 1.4;
	color: dimgray;
	margin: 10px 0 80px 0;
}

.caption {
	font-family: 'News Gothic Regular', 'Arial Narrow', sans-serif, sans-serif !important;
	-webkit-font-smoothing: antialiased;
	font-size: 16px;
	line-height: 1.4;
	color: dimgray;
	margin: 0;
}

.contact {
	font-family: "News Gothic", 'Arial Narrow', sans-serif; 
	font-size: 11px;
	text-transform: uppercase;
	letter-spacing: 1px;
	color: dimgray;
	padding: 0;
	margin: 0;
}

.intro {
	font-family: ScalaWeb, serif;
	-webkit-font-smoothing: antialiased;
	font-size: 16px;
	line-height: 1.8;
	color: black;
	padding-bottom: 18px;
	margin: 20px 0 20px 0;
	border-bottom: 1px solid rgb(242, 134, 39);
}

.tagline {
	font-family: ScalaWeb, serif;
	-webkit-font-smoothing: antialiased;
	font-style: italic;
	font-size: 18px;
	line-height: 1.5;
	color: dimgray;
	margin: 20px 0 0 0;
	
}

.normal {
	font-family: ScalaWeb, serif;
	-webkit-font-smoothing: antialiased;
	font-size: 14px;
	line-height: 1.6;
	color: black;
	margin: 0;
	padding: 0;
	font-weight: normal;
}

.larger {
	font-family: "News Gothic", 'Arial Narrow', sans-serif; 
	-webkit-font-smoothing: antialiased;
	font-size: 20px;
	line-height: 1.5;
	color: black;
	margin-top: 20px;
}

.credit {
	list-style-type: none;
	color: dimgray;
	font-size: 13px;
	line-height: 1.2; 
	padding-bottom: 7px;
}

#credits {
	display: none;
}

.space {
	padding-bottom: 20px;
}

.res-space {
	padding-top: 40px;
}

h2 {
	font-family: "News Gothic", 'Arial Narrow', sans-serif; 
	-webkit-font-smoothing: antialiased;
	color: rgb(242, 134, 39);
	font-size: 17px;
	font-weight:normal;

}

/* HEADER */ 

.gallery-number {
	font-family: "News Gothic", 'Arial Narrow', sans-serif; 
	color: black;
	font-size: 17px;
	font-weight:normal;
	float: left;
	line-height: .8;
	padding: 0px 8px 0px 4px;
}

.gallery-arrow {
	float: right;
	color: black;
	font-size: 18px;
	line-height: .8;
	padding: 0px 8px 0px 4px;
}
 
.active {
	color: rgb(242, 134, 39);
}

/* menu */ 

li.menu_main, li.menu_sub {
	font-family: "News Gothic", 'Arial Narrow', sans-serif;
	-webkit-font-smoothing: antialiased;
	font-size: 17px;
	line-height: 1.3;
	color: black;
	list-style-type: none;
	color: black;

}

li.menu_sub a {
	font-family: "News Gothic", 'Arial Narrow', sans-serif;
	-webkit-font-smoothing: antialiased;
	font-size: 17px;
	line-height: 1.3;
	color: black;
	list-style-type: none;
	padding-left: 10px;
}

li.menu_sub.active a {
		color: gray;
}

li.menu_sub a:hover {
	color: rgb(242, 134, 39);
}

li.menu_main:hover, li.menu_sub:hover {
	color: rgb(242, 134, 39);
	cursor: pointer;
	text-decoration: none;
	-webkit-transition: color 500ms linear;
	-moz-transition: color 500ms linear;
	-o-transition: color 500ms linear;
	-ms-transition: color 500ms linear;
	transition: color 500ms linear;
}

li.menu_main.active a {
		color: gray;
}

/* project list & resume */ 

li.noindent {
	font-family: ScalaWeb, serif;
	-webkit-font-smoothing: antialiased;
	font-size: 17px;
	line-height: 1.3;
	color: black;
	list-style-type: none;
}

li.noindent a:hover {
	color: rgb(242, 134, 39);
	cursor: pointer;
	text-decoration: none;
	-webkit-transition: color 500ms linear;
	-moz-transition: color 500ms linear;
	-o-transition: color 500ms linear;
	-ms-transition: color 500ms linear;
	transition: color 500ms linear;
}

li.indent {
	font-family: ScalaWeb, serif;
	-webkit-font-smoothing: antialiased;
	font-size: 16px;
	line-height: 1.3;
	color: dimgray; 
	padding: 0 0 10px 10px;
	list-style-type: none;
}

li {
	list-style-type:  none;
}

a:hover {
	text-decoration: none;
	color: rgb(242, 134, 39);
}

.menu {
	font-family: "News Gothic Regular", 'Arial Narrow', sans-serif; 
	color: rgb(242, 134, 39);
	font-size: 17px;
	font-weight:normal;
	text-transform: capitalize;
	line-height: .8;
	padding: 5px 0 5px 0;
	margin: 0 0 0 10px;
}

.menu:hover {
	cursor: pointer;
	color: rgb(242, 134, 39);
	-webkit-transition: color 200ms linear;
	-moz-transition: color 200ms linear;
	-o-transition: color 200ms linear;
	-ms-transition: color 200ms linear;
	transition: color 200ms linear;
}

.menu_options {
	font-weight: normal;
	text-transform: capitalize;
	color: black;
	padding: 0;
	margin: 0 0 0 50px;
}

.project_option, .studio_option {
	text-transform: capitalize;
	color: black;
	padding: 0;
	margin: 0 0 0 30px;
}

#menu {
	float: left;
	border-top: 1px solid rgb(242, 134, 39);
}

#menu ul {
	margin: 0;
	padding: 0;
}

#menu li {
	list-style-type: none;
}

#project_menu {
	margin: 0 0 10px 0;
	padding: 0;

}

#studio_menu {
	margin: 11px 0;
	padding: 0;
}

.hide {
	display: none; 
}

.show {
	display: block;
}

.logo {
	display: none;
}

.logo_right {
	float: left;
	margin: 0;
	padding: 0;
}

.logo_left {
	float: right; 
	margin: 0;
	padding: 0;
}

.content {
	float: left;
}

.full {
	width: 100%;
}

.bio_image {
	width: 50%;
	margin: 15px 0 0 0;
}

.left_image_list {
	width: 46%;
	float: left;
	padding: 0 4% 0 0;
}

.right_image_list {
	width: 46%;
	float: right;
	padding: 0 0 0 4%;
}

.list_image {
	width: 100%;
	margin: 0;
}


/* CV */ 

table {
	width: 100%;
	margin-top: 20px;
}

table td {
	width: 50%;
}

table td, table td * {
    vertical-align: top;
}

.credit_left {
	width: 40%;
	padding-right: 2%;

}

.credit_right {
	width: 58%;

}

.cv_container {
	margin: 10px 0 0 0;
}

.projects {
	margin: 40px 0 40px 0;
	padding: 40px 0 0 60px;
	border-left: 1px dotted rgb(242, 134, 39);
}

.border-left {
	border-left: 1px dotted rgb(242, 134, 39);
}

footer {
	width: 100%;
	padding-top: 80px;
}

#footer {
	background-color: whitesmoke;
	width: 100%;
	text-align: left;
	padding: 1em 1em 1em 1em;
}

@media(max-width:767px){

	/* MENU */ 

	.normal {
		font-size: 16px;
	}

	li.menu_main {
		border-top: 1px solid lightgray;
		font-size: 25px;
		padding: 20px 0 20px 0;
	}

	li.menu_sub {
		font-size: 25px;
		padding: 20px 0 0 10px;
	}

	li.menu_sub a {
		font-size: 25px;
	}

	h2#studio_menu {
		border-top: 1px solid rgb(242, 134, 39);
		padding: 0;
		margin: 0;
	}

	h2#project_menu, h2#studio_menu {
		padding: 20px 0;
		margin: 0;
	}

	#header_content {
		padding-left: 0;
	}

	.logo_left {
		display: none;

	}

	.logo_right {
		display: none;
	}

	.logo {
		display: block;
	}

	.projects {
		padding-left: 20px;
	}
}

@media(max-width:1199px) {

	#menu {
		padding-top: 35px;
		margin-top: 40px;
	}

	.column-container {
		margin: 0;
		padding: 0;
	}

	/* MENU */ 

	.normal {
		font-size: 16px;
	}

	li.menu_main {
		border-top: 1px solid lightgray;
		font-size: 25px;
		padding: 20px 0 20px 0;
	}

	li.menu_sub {
		font-size: 25px;
		padding: 10px 0 0 10px;
	}

	h2#studio_menu {
		border-top: 1px solid rgb(242, 134, 39);
		padding: 0;
		margin: 0;
	}

	h2#project_menu, h2#studio_menu {
		padding: 20px 0;
		margin: 0;
	}

	/* GALLERY NAVIGATION */

	.gallery-arrow {
		display: none;
	}

	.gallery-number {
		display: none;
	}

	#header-column-2 {
		padding: 0;
	}

	#header-column-3 {
		padding: 0;
	}

	.projects {
		margin-top: 0;
	}


}

@media(min-width:1200px){

	#menu {
		border-top: none;
	}

	#header-column-2 {
		padding: 0;
	}

	#header-column-3 {
		padding: 0;
	}
}

